# conflowgen

./: .coveragerc  .flake8  .flake8_nb  .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  CITATION.cff  Contributing.md  LICENSE  Readme.md  codecov.yml  coverage.xml  create-env.bat  junit.xml  prepare_publish.bat  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_ci_light.bat  setup.py  start-jupyterlab.bat  testreport.junit.xml  update-env.bat
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: citation.yml  codeql-analysis.yml  conda-installation-not-in-path.yaml  conda-installation.yaml  demo.yaml  docs.yaml  installation-from-remote.yaml  linting.yml  pylint.yml  unittests.yaml
.pycharm/pytest.run/: pytest in conflowgen.run.xml
.working-library-versions/: requirements.txt
conflowgen/: __init__.py  metadata.py
conflowgen/analyses/: __init__.py  abstract_analysis.py  container_dwell_time_analysis.py  container_dwell_time_analysis_report.py  container_flow_adjustment_by_vehicle_type_analysis.py  container_flow_adjustment_by_vehicle_type_analysis_report.py  container_flow_adjustment_by_vehicle_type_analysis_summary.py  container_flow_adjustment_by_vehicle_type_analysis_summary_report.py  container_flow_by_vehicle_instance_analysis.py  container_flow_by_vehicle_instance_analysis_report.py  container_flow_by_vehicle_type_analysis.py  container_flow_by_vehicle_type_analysis_report.py  container_flow_vehicle_type_adjustment_per_vehicle_analysis.py  container_flow_vehicle_type_adjustment_per_vehicle_analysis_report.py  inbound_and_outbound_vehicle_capacity_analysis.py  inbound_and_outbound_vehicle_capacity_analysis_report.py  inbound_to_outbound_vehicle_capacity_utilization_analysis.py  inbound_to_outbound_vehicle_capacity_utilization_analysis_report.py  modal_split_analysis.py  modal_split_analysis_report.py  outbound_to_inbound_vehicle_capacity_utilization_analysis.py  outbound_to_inbound_vehicle_capacity_utilization_analysis_report.py  quay_side_throughput_analysis.py  quay_side_throughput_analysis_report.py  truck_gate_throughput_analysis.py  truck_gate_throughput_analysis_report.py  yard_capacity_analysis.py  yard_capacity_analysis_report.py
conflowgen/api/: __init__.py  container_dwell_time_distribution_manager.py  container_flow_generation_manager.py  container_length_distribution_manager.py  container_storage_requirement_distribution_manager.py  container_weight_distribution_manager.py  database_chooser.py  export_container_flow_manager.py  mode_of_transport_distribution_manager.py  port_call_manager.py  storage_requirement_distribution_manager.py  truck_arrival_distribution_manager.py
conflowgen/application_models/: container_flow_statistics_report.py
conflowgen/command_line_interface/: spreadsheet_interface.py
conflowgen/container_flow_data_generation_process/: allocate_space_for_containers_delivered_by_truck_service.py  assign_destination_to_container_service.py  container_flow_generation_service.py  export_container_flow_service.py  large_scheduled_vehicle_creation_service.py  large_scheduled_vehicle_for_onward_transportation_manager.py  (+2 more)
conflowgen/demo/: demo_DEHAM_CTA.py  (+1 more)
demo/: Readme.md  demo_DEHAM_CTA.py  demo_poc.py
docs/: .nitpick-exceptions  api.rst  background.rst  bibliography.rst  conf.py  contributing.md  demo.rst  download_prepared_sqlite_databases.ps1  example_usage.rst  examples.rst  imprint.rst  index.rst  references.bib
examples/: Readme.md
(+398 files in other folders)
